--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,34 @@
 version: '3'
 services:
   gekko:
+    image: gekko:latest
     build: ./
     volumes:
-      - ./volumes/gekko/history:/usr/src/app/history
+      - /root/history:/usr/src/app/history
       - ./config.js:/usr/src/app/config.js
     links:
       - redis
-#      - postgresql
     environment:
      - HOST
      - PORT
-     - USE_SSL
     ports: # you can comment this out when using the nginx frontend
-      - "${PORT}:${PORT}"
+      - "${PORT}"
+    expose:
+      - "5000"
 ## optionally set nginx vars if you wish to frontend it with nginx
-#    environment:
-#     - VIRTUAL_HOST=gekko
-#     - PORT=3000
-#     - DOMAIN=gekko
-
+#   environment:
+#    - VIRTUAL_HOST=gekko
+#    - PORT=3000
+#    - DOMAIN=gekko
   redis:
     image: redis:latest
     volumes:
       - ./volumes/redis:/data
-## optionally uncomment if you wish to use nginx as a frontend
-#  nginx:
-#    restart: always
-#    image: jwilder/nginx-proxy
-#    ports:
-#     - "80:80"
-#    volumes:
-#     - /var/run/docker.sock:/tmp/docker.sock:ro
-## optionally uncomment if you wish to use postgresql as a db
-#  postgresql:
-#    restart: always
-#    image: postgres:9.6-alpine
-#    ports:
-#      - 5432:5432
-#    volumes:
-#      - ./_postgresql:/var/lib/postgresql/data:rw
-#    environment:
-#      POSTGRES_DB: gekko
-#      POSTGRES_USER: username
-#      POSTGRES_PASSWORD: password
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - gekko
+    ports:
+      - "4000:4000"
